// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component renders a component 1`] = `
<div>
  <div>
    bar
  </div>
</div>
`;

exports[`Component should only rerender when state has changed 1`] = `
Object {
  "receives": Array [
    Object {
      "bar": "nom",
      "foo": "bar",
    },
    Object {
      "bar": "mon",
      "foo": "bar",
    },
    Object {
      "bar": "mon2",
      "foo": "bar",
    },
  ],
  "renders": Array [
    Object {
      "foo": "bar",
      "size": 3,
    },
    Object {
      "foo": "bar",
      "size": 4,
    },
  ],
}
`;

exports[`Component supports lifecylce methods 1`] = `
Object {
  "mountedEvents": Array [
    Object {
      "foo": "bar",
    },
  ],
  "unmountedEvents": Array [],
  "updateEvents": Array [
    Object {
      "foo": "bar",
    },
  ],
}
`;

exports[`Component supports lifecylce methods 2`] = `
Object {
  "mountedEvents": Array [
    Object {
      "foo": "bar",
    },
  ],
  "unmountedEvents": Array [],
  "updateEvents": Array [
    Object {
      "foo": "bar",
    },
    Object {
      "foo": "nom",
    },
  ],
}
`;

exports[`Component supports lifecylce methods 3`] = `
Object {
  "mountedEvents": Array [
    Object {
      "foo": "bar",
    },
  ],
  "unmountedEvents": Array [
    Object {
      "foo": "nom",
    },
  ],
  "updateEvents": Array [
    Object {
      "foo": "bar",
    },
    Object {
      "foo": "nom",
    },
  ],
}
`;
